clang-ir/tests/snapshots/snapshot_fixtures__fixtures__mt_atomics.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/mt-atomics.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]
global counter : s32i = 0 [internal, default, align 4, dso_local]

fn pthread_create(%arg0: u64i*, %arg1: rec_pthread_attr_t*, %arg2: ((void*) -> void*)*, %arg3: void*) -> s32i [external, c, nothrow];
fn worker(%arg0: void*) -> void* [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: void*):
        %38 = alloca void*, "arg", align 8
        %39 = alloca void*, "__retval", align 8
        store %arg0, %38
        %40 = load %38 : void*, align 8
        scope {
            %43 = alloca s32i, "i", align 4
            %44 = const 0 : s32i
            store %44, %43, align 4
            for cond: {
                %54 = load %43 : s32i, align 4
                %55 = const 100000 : s32i
                %56 = cmp lt %54, %55 : bool
                condition %56
            } step: {
                %45 = load %43 : s32i, align 4
                %46 = inc %45 : s32i [nsw]
                store %46, %43, align 4
                yield
            } do {
                scope {
                    %47 = alloca s32i, ".atomictmp", align 4
                    %48 = alloca s32i, "atomic-temp", align 4
                    %49 = get_global @counter : s32i*
                    %50 = const 1 : s32i
                    store %50, %47, align 4
                    %51 = load %47 : s32i, align 4
                    %52 = atomic.fetch add seq_cst syncscope(system) %49, %51 : s32i [fetch_first]
                    store %52, %48, align 4
                    %53 = load %48 : s32i, align 4
                    yield
                }
                yield
            }
            yield
        }
        %41 = const #cir.ptr<null> : void*
        store %41, %39
        %42 = load %39 : void*
        return %42
}
fn pthread_join(%arg0: u64i, %arg1: void**) -> s32i [external, c];
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca u64i[4], "threads", align 16
    %2 = const 0 : s32i
    store %2, %0
    scope {
        %24 = alloca s32i, "i", align 4
        %25 = const 0 : s32i
        store %25, %24, align 4
        for cond: {
            %35 = load %24 : s32i, align 4
            %36 = const 4 : s32i
            %37 = cmp lt %35, %36 : bool
            condition %37
        } step: {
            %26 = load %24 : s32i, align 4
            %27 = inc %26 : s32i [nsw]
            store %27, %24, align 4
            yield
        } do {
            scope {
                %28 = load %24 : s32i, align 4
                %29 = cast(integral) %28 : s64i
                %30 = get_element %1[%29] : u64i*
                %31 = const #cir.ptr<null> : rec_pthread_attr_t*
                %32 = get_global @worker : ((void*) -> void*)*
                %33 = const #cir.ptr<null> : void*
                %34 = call @pthread_create(%30, %31, %32, %33) : s32i [all]
                yield
            }
            yield
        }
        yield
    }
    scope {
        %11 = alloca s32i, "i", align 4
        %12 = const 0 : s32i
        store %12, %11, align 4
        for cond: {
            %21 = load %11 : s32i, align 4
            %22 = const 4 : s32i
            %23 = cmp lt %21, %22 : bool
            condition %23
        } step: {
            %13 = load %11 : s32i, align 4
            %14 = inc %13 : s32i [nsw]
            store %14, %11, align 4
            yield
        } do {
            scope {
                %15 = load %11 : s32i, align 4
                %16 = cast(integral) %15 : s64i
                %17 = get_element %1[%16] : u64i*
                %18 = load %17 : u64i, align 8
                %19 = const #cir.ptr<null> : void**
                %20 = call @pthread_join(%18, %19) : s32i [all]
                yield
            }
            yield
        }
        yield
    }
    %3 = get_global @printf : ((s8i*, ...) -> s32i)*
    %4 = get_global @.str : s8i[4]*
    %5 = cast(array_to_ptrdecay) %4 : s8i*
    %6 = get_global @counter : s32i*
    %7 = load %6 : s32i, align 4
    %8 = call @printf(%5, %7) : s32i [all]
    %9 = const 0 : s32i
    store %9, %0
    %10 = load %0 : s32i
    return %10
}
