clang-ir/tests/snapshots/snapshot_fixtures__fixtures__non_int_fields.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/non_int_fields.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%f\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%c\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%u\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn struct_values() -> s32i [internal, c, no_inline, dso_local, nothrow] {
        %38 = alloca s32i, "__retval", align 4
        %39 = alloca rec_Mixed, "m", align 8
        %40 = const 65 : s8i
        get_member
        store %40, %41, align 8
        %42 = const 200 : u8i
        get_member
        store %42, %43, align 1
        %44 = const 1.500000e+00 : float
        get_member
        store %44, %45, align 4
        %46 = const 2.250000e+00 : double
        get_member
        store %46, %47, align 8
        %48 = get_global @printf : (s8i*, ...) -> s32i*
        %49 = get_global @.str.2 : s8i[4]*
        %50 = cast(array_to_ptrdecay) %49 : s8i*
        get_member
        %52 = load %51 : s8i, align 8
        %53 = cast(integral) %52 : s32i
        %54 = call @printf(%50, %53) : s32i [all]
        %55 = get_global @printf : (s8i*, ...) -> s32i*
        %56 = get_global @.str.3 : s8i[4]*
        %57 = cast(array_to_ptrdecay) %56 : s8i*
        get_member
        %59 = load %58 : u8i, align 1
        %60 = cast(integral) %59 : s32i
        %61 = call @printf(%57, %60) : s32i [all]
        %62 = get_global @printf : (s8i*, ...) -> s32i*
        %63 = get_global @.str.1 : s8i[4]*
        %64 = cast(array_to_ptrdecay) %63 : s8i*
        get_member
        %66 = load %65 : float, align 4
        %67 = cast(floating) %66 : double
        %68 = call @printf(%64, %67) : s32i [all]
        %69 = get_global @printf : (s8i*, ...) -> s32i*
        %70 = get_global @.str.1 : s8i[4]*
        %71 = cast(array_to_ptrdecay) %70 : s8i*
        get_member
        %73 = load %72 : double, align 8
        %74 = call @printf(%71, %73) : s32i [all]
        get_member
        %76 = load %75 : u8i, align 1
        %77 = cast(integral) %76 : s32i
        store %77, %38
        %78 = load %38 : s32i
        return %78
}
fn union_double(%arg1: double) -> double [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: double):
        %30 = alloca double, "value", align 8
        %31 = alloca double, "__retval", align 8
        %32 = alloca rec_Scalar, "s", align 8
        store %arg1, %30
        %33 = load %30 : double, align 8
        get_member
        store %33, %34, align 8
        get_member
        %36 = load %35 : double, align 8
        store %36, %31
        %37 = load %31 : double
        return %37
}
fn union_char(%arg0: s8i) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s8i):
        %21 = alloca s8i, "value", align 1
        %22 = alloca s32i, "__retval", align 4
        %23 = alloca rec_Scalar, "s", align 8
        store %arg0, %21
        %24 = load %21 : s8i, align 1
        get_member
        store %24, %25, align 8
        get_member
        %27 = load %26 : s8i, align 8
        %28 = cast(integral) %27 : s32i
        store %28, %22
        %29 = load %22 : s32i
        return %29
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = get_global @printf : (s8i*, ...) -> s32i*
        %3 = get_global @.str : s8i[4]*
        %4 = cast(array_to_ptrdecay) %3 : s8i*
        %5 = call @struct_values() : s32i [all]
        %6 = call @printf(%4, %5) : s32i [all]
        %7 = get_global @printf : (s8i*, ...) -> s32i*
        %8 = get_global @.str.1 : s8i[4]*
        %9 = cast(array_to_ptrdecay) %8 : s8i*
        %10 = const 4.500000e+00 : double
        %11 = call @union_double(%10) : double [all]
        %12 = call @printf(%9, %11) : s32i [all]
        %13 = get_global @printf : (s8i*, ...) -> s32i*
        %14 = get_global @.str : s8i[4]*
        %15 = cast(array_to_ptrdecay) %14 : s8i*
        %16 = const 90 : s8i
        %17 = call @union_char(%16) : s32i [all]
        %18 = call @printf(%15, %17) : s32i [all]
        %19 = const 0 : s32i
        store %19, %0
        %20 = load %0 : s32i
        return %20
}
