clang-ir/tests/snapshots/snapshot_fixtures__fixtures__nonnull_contract_positions.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/nonnull_contract_positions.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[7] = ConstArray { ty: Array { element_type: Named("s8i"), size: 7 }, elts: Str("%d %d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn combine(%arg3: s32i*, %arg4: s32i, %arg5: s32i*, %arg6: s32i*) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg3: s32i*, %arg4: s32i, %arg5: s32i*, %arg6: s32i*):
        %29 = alloca s32i*, "left", align 8
        %30 = alloca s32i, "scale", align 4
        %31 = alloca s32i*, "right", align 8
        %32 = alloca s32i*, "optional", align 8
        %33 = alloca s32i, "__retval", align 4
        store %arg3, %29
        store %arg4, %30
        store %arg5, %31
        store %arg6, %32
        %34 = load %29 : s32i*, align 8
        %35 = load %34 : s32i, align 4
        %36 = load %30 : s32i, align 4
        %37 = load %31 : s32i*, align 8
        %38 = load %37 : s32i, align 4
        mul
        %40 = add %35, %39 : s32i [nsw]
        %41 = load %32 : s32i*, align 8
        %42 = cast(ptr_to_bool) %41 : bool
        %43 = ternary %42 ? { : s32i
                %47 = load %32 : s32i*, align 8
                %48 = load %47 : s32i, align 4
                yield %48
        } : {
                %46 = const 0 : s32i
                yield %46
        }
        %44 = add %40, %43 : s32i [nsw]
        store %44, %33
        %45 = load %33 : s32i
        return %45
}
fn difference(%arg0: s32i*, %arg1: s32i, %arg2: s32i*) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i*, %arg1: s32i, %arg2: s32i*):
        %17 = alloca s32i*, "left", align 8
        %18 = alloca s32i, "scale", align 4
        %19 = alloca s32i*, "right", align 8
        %20 = alloca s32i, "__retval", align 4
        store %arg0, %17
        store %arg1, %18
        store %arg2, %19
        %21 = load %17 : s32i*, align 8
        %22 = load %21 : s32i, align 4
        %23 = load %18 : s32i, align 4
        %24 = load %19 : s32i*, align 8
        %25 = load %24 : s32i, align 4
        mul
        sub
        store %27, %20
        %28 = load %20 : s32i
        return %28
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "left", align 4
        %2 = alloca s32i, "right", align 4
        %3 = const 0 : s32i
        store %3, %0
        %4 = const 11 : s32i
        store %4, %1, align 4
        %5 = const 3 : s32i
        store %5, %2, align 4
        %6 = get_global @printf : (s8i*, ...) -> s32i*
        %7 = get_global @.str : s8i[7]*
        %8 = cast(array_to_ptrdecay) %7 : s8i*
        %9 = const 2 : s32i
        %10 = const #cir.ptr<null> : s32i*
        %11 = call @combine(%1, %9, %2, %10) : s32i [all]
        %12 = const 2 : s32i
        %13 = call @difference(%1, %12, %2) : s32i [all]
        %14 = call @printf(%8, %11, %13) : s32i [all]
        %15 = const 0 : s32i
        store %15, %0
        %16 = load %0 : s32i
        return %16
}
