clang-ir/tests/snapshots/snapshot_fixtures__fixtures__nonnull_prototype.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/nonnull_prototype.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn use_it(%arg0: s32i*, %arg1: s32i*) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i*, %arg1: s32i*):
        %13 = alloca s32i*, "a", align 8
        %14 = alloca s32i*, "b", align 8
        %15 = alloca s32i, "__retval", align 4
        store %arg0, %13
        store %arg1, %14
        %16 = load %13 : s32i*, align 8
        %17 = load %16 : s32i, align 4
        %18 = load %14 : s32i*, align 8
        %19 = load %18 : s32i, align 4
        div
        store %20, %15
        %21 = load %15 : s32i
        return %21
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "x", align 4
        %2 = alloca s32i, "y", align 4
        %3 = const 0 : s32i
        store %3, %0
        %4 = const 6 : s32i
        store %4, %1, align 4
        %5 = const 2 : s32i
        store %5, %2, align 4
        %6 = get_global @printf : (s8i*, ...) -> s32i*
        %7 = get_global @.str : s8i[4]*
        %8 = cast(array_to_ptrdecay) %7 : s8i*
        %9 = call @use_it(%1, %2) : s32i [all]
        %10 = call @printf(%8, %9) : s32i [all]
        %11 = const 0 : s32i
        store %11, %0
        %12 = load %0 : s32i
        return %12
}
